--- a/files/style.css
+++ b/files/style.css
@@ -104,7 +104,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h3{
-  font-size: 60px;
+  font-size: 40px;
 }
 
 h4{
@@ -141,7 +141,7 @@ p {
   left: calc(50% - 20px);
   height: 1px;
   width: 40px;
-  background: #d6b161;
+  background: #FA9A91;
   z-index: 2;
 }
 
@@ -157,16 +157,14 @@ p {
   position: absolute;
   bottom: -1px;
   left: 0;
-  background: #d6b161;
+  background: #FA9A91;
   height: 1px;
   width: 70px;
 }
 
 .sm-title {
-  text-transform: uppercase;
-  font-size: 13px;
-  font-weight: 700;
-  letter-spacing: 1px;
+  font-size: 25px;
+  font-weight: 200;
 }
 
 .button-top {
@@ -251,7 +249,7 @@ p {
   position: relative;
 }
 .navbar-default .navbar-nav > li .active {
-  color: #d6b161 !important;
+  color: #FA9A91 !important;
   background: none;
 }
 
@@ -323,7 +321,7 @@ p {
 }
 .header .caption h4 {
   margin-bottom: 30px;
-  color: #d6b161;
+  color: #FA9A91;
 }
 .header .caption h1 {
   margin-bottom: 30px;
@@ -332,7 +330,7 @@ p {
   text-transform: uppercase;
 }
 .header .caption .type span {
-  color: #d6b161;
+  color: #FA9A91;
   font-size: 37px;
   font-weight: 400;
 }
@@ -415,7 +413,7 @@ p {
   line-height: 1.8;
 }
 .hero .hero-content .info h5 span {
-  color: #d6b161;
+  color: #FA9A91;
   padding-right: 10px;
 }
 .hero .hero-content .info h5 span .icon {
@@ -437,9 +435,9 @@ p {
   transition: all .5s;
 }
 .hero .hero-content .social-icon span:hover {
-  background: #d6b161;
+  background: #FA9A91;
   color: #fff;
-  border-color: #d6b161;
+  border-color: #FA9A91;
 }
 .hero .skills .item {
   margin-bottom: 40px;
@@ -460,7 +458,7 @@ p {
   height: 100%;
   position: absolute;
   left: 0;
-  background: #d6b161;
+  background: #FA9A91;
   -webkit-transition: all 1s;
   transition: all 1s;
 }
@@ -582,7 +580,7 @@ p {
 }
 .numbers .item .icon {
   font-size: 35px;
-  color: #d6b161;
+  color: #FA9A91;
   margin-bottom: 15px;
 }
 .numbers .item h5 {
@@ -603,7 +601,7 @@ p {
 }
 .services .item .icon {
   font-size: 35px;
-  color: #d6b161;
+  color: #FA9A91;
   margin-bottom: 15px;
 }
 .services .item h6 {
@@ -646,7 +644,7 @@ p {
 .clients .icon {
   font-size: 40px;
   margin-bottom: 30px;
-  color: #d6b161;
+  color: #FA9A91;
 }
 .clients .client-item {
   color: #fff;
@@ -668,7 +666,7 @@ p {
   margin-bottom: 30px;
   font-size: 12px;
   letter-spacing: 1px;
-  color: #d6b161;
+  color: #FA9A91;
 }
 .clients .owl-theme .owl-dots .owl-dot span {
   background: transparent;
@@ -676,8 +674,8 @@ p {
 }
 .clients .owl-theme .owl-dots .owl-dot.active span,
 .clients .owl-theme .owl-dots .owl-dot:hover span {
-  background: #d6b161;
-  border-color: #d6b161;
+  background: #FA9A91;
+  border-color: #FA9A91;
 }
 
 /* -------------------------------------------------------
@@ -702,7 +700,7 @@ p {
   content: "";
   width: 1px;
   height: 100%;
-  background: #d6b161;
+  background: #FA9A91;
   position: absolute;
   left: 50%;
   top: 0;
@@ -711,7 +709,7 @@ p {
   transition: all .4s;
 }
 .portfolio .filtering .active {
-  color: #d6b161;
+  color: #FA9A91;
 }
 .portfolio .filtering .active:after {
   left: 0;
@@ -766,7 +764,7 @@ p {
   cursor: pointer;
 }
 .portfolio .item-img .icon:hover {
-  background: #d6b161;
+  background: #FA9A91;
   color: #fff;
 }
 .portfolio .item-img-overlay {
@@ -840,8 +838,8 @@ p {
   font-size: 16px;
   padding: 8px 28px;
   margin: 5px;
-  background: #d6b161;
-  border: 1px solid #d6b161;
+  background: #FA9A91;
+  border: 1px solid #FA9A91;
   border-radius: 30px;
   -webkit-transition: all .5s;
   transition: all .5s;
@@ -875,7 +873,7 @@ p {
 }
 .blog .item .cont-post .tag {
   margin-bottom: 30px;
-  color: #d6b161;
+  color: #FA9A91;
 }
 .blog .item .cont-post h6 {
   font-size: 18px;
@@ -883,8 +881,8 @@ p {
 }
 .blog .item .cont-post .botn {
   margin-top: 30px;
-  background: #d6b161;
-  border: 1px solid #d6b161;
+  background: #FA9A91;
+  border: 1px solid #FA9A91;
   border-radius: 30px;
   color: #fff;
   padding: 10px 25px;
@@ -893,7 +891,7 @@ p {
 }
 .blog .item .cont-post .botn:hover {
   background: transparent;
-  color: #d6b161;
+  color: #FA9A91;
 }
 
 .posts {
@@ -929,7 +927,7 @@ p {
   padding: 30px;
   margin: 10px auto;
   background: #f7f7f7;
-  border-left: 4px solid #d6b161;
+  border-left: 4px solid #FA9A91;
 }
 .posts .item .content .mor-inf {
   margin-bottom: 30px;
@@ -943,15 +941,15 @@ p {
   letter-spacing: 1px;
 }
 .posts .item .content .mor-inf li a:hover {
-  color: #d6b161;
+  color: #FA9A91;
 }
 .posts .item .content .mor-inf li .icon {
   margin-right: 5px;
 }
 .posts .item .content .more {
   padding: 12px 30px;
-  background: #d6b161;
-  border: 1px solid #d6b161;
+  background: #FA9A91;
+  border: 1px solid #FA9A91;
   color: #fff;
   text-transform: uppercase;
   font-size: 12px;
@@ -961,7 +959,7 @@ p {
 }
 .posts .item .content .more:hover {
   background: transparent;
-  color: #d6b161;
+  color: #FA9A91;
 }
 .posts .item .content .share .shar {
   border: 1px solid #ccc;
@@ -987,7 +985,7 @@ p {
   line-height: 30px;
 }
 .posts .item .content .share span:hover {
-  color: #d6b161;
+  color: #FA9A91;
 }
 .posts .comm {
   padding-bottom: 30px;
@@ -1036,8 +1034,8 @@ p {
   max-height: 160px;
 }
 .posts .lev-comm input[type="submit"] {
-  background: #d6b161;
-  border-color: #d6b161;
+  background: #FA9A91;
+  border-color: #FA9A91;
   color: #fff;
   font-size: 14px;
   text-transform: uppercase;
@@ -1047,7 +1045,7 @@ p {
 }
 .posts .lev-comm input[type="submit"]:hover {
   background: transparent;
-  color: #d6b161;
+  color: #FA9A91;
 }
 .posts .numb span {
   padding: 10px 16px;
@@ -1060,12 +1058,12 @@ p {
   transition: all .5s;
 }
 .posts .numb span:hover {
-  background: #d6b161;
-  border-color: #d6b161;
+  background: #FA9A91;
+  border-color: #FA9A91;
   color: #fff;
 }
 .posts .numb .active {
-  border-color: #d6b161;
+  border-color: #FA9A91;
   color: #555;
 }
 
@@ -1127,8 +1125,8 @@ p {
   transition: all .5s;
 }
 .side-bar .widget .follow span:hover {
-  border-color: #d6b161;
-  background: #d6b161;
+  border-color: #FA9A91;
+  background: #FA9A91;
   color: #fff;
 }
 .side-bar .widget .lpost .item {
@@ -1166,7 +1164,7 @@ p {
   left: 0;
   top: 1px;
   font-family: "FontAwesome";
-  color: #d6b161;
+  color: #FA9A91;
 }
 .side-bar .widget .catg h5 span {
   float: right;
@@ -1181,8 +1179,8 @@ p {
   transition: all .5s;
 }
 .side-bar .widget .tags span:hover {
-  background: #d6b161;
-  border-color: #d6b161;
+  background: #FA9A91;
+  border-color: #FA9A91;
   color: #fff;
 }
 
@@ -1252,8 +1250,8 @@ p {
   color: #eee;
 }
 .contact .form input[type="submit"] {
-  border: 1px solid #d6b161;
-  background: #d6b161;
+  border: 1px solid #FA9A91;
+  background: #FA9A91;
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -1262,7 +1260,7 @@ p {
 }
 .contact .form input[type="submit"]:hover {
   background: transparent;
-  color: #d6b161;
+  color: #FA9A91;
 }
 .contact .info {
   text-align: center;
@@ -1276,7 +1274,7 @@ p {
 .contact .info .item .icon {
   font-size: 30px;
   margin-bottom: 20px;
-  color: #d6b161;
+  color: #FA9A91;
 }
 .contact .info .item h6 {
   font-family: "Muli", sans-serif;
@@ -1293,7 +1291,7 @@ p {
   margin: 0 15px;
 }
 .contact .info .social-icon span:hover {
-  color: #d6b161;
+  color: #FA9A91;
 }
 .contact .copy {
   margin-top: 80px;
@@ -1301,6 +1299,21 @@ p {
   font-size: 11px;
   text-transform: uppercase;
   letter-spacing: 1px;
+}
+
+
+.account-img{
+  height: auto; width: auto;
+}
+.welcome-h3{
+  font-size: 40px;
+}
+
+@media screen and (max-width: 600px) {
+    .account-img {
+        width: 100%;
+        height: auto;
+    }
 }
 
 /* -------------------------------------------------------
